--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -15,6 +15,13 @@
         <vm:MainWindowViewModel/>
     </Design.DataContext>
 
-    <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-
+    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+        <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Button Content="Go to Login"
+                Width="120"
+                Height="40"
+                Margin="10"
+                Command="{Binding ShowLoginCommand}" />
+    </StackPanel>
+    
 </Window>
